add configuration options, base request delay, and reset error count on each crawl

--- a/src/main/resources/edda.properties
+++ b/src/main/resources/edda.properties
@@ -143,6 +143,36 @@ edda.bean.argPattern=[^a-zA-Z0-9_]
 # edda.crawler.$account.$collection.abortWithoutTags=true
 
 #
+# edda will automatically throttle AWS API access if it hits the account limit.
+# when AWS returns a throttling/limit error an internal counter is activated
+# and begans delaying requests by the throttleDelay (in milliseconds).
+#
+# edda.crawler.throttleDelay=200
+
+#
+# if AWS continues to throw limit errors after the throttling is activated
+# the delay will be increased until a maximum number of attempts is reached,
+# after which the run will be aborted and an exception will appear in the logs
+#
+# if the multiplier is 225 and the delay is 200 each request will wait
+#  200*225 milliseconds, or 45 seconds before hitting the API
+#
+# edda.crawler.maxDelayMultiplier=225
+
+#
+# if you have other applications using the AWS API and want to avoid
+# edda using all of your API requests you can pace edda by setting a delay
+# before making each API request. the default behavior is to hit the API
+# as quickly as possible on each crawl. this value is in milliseconds.
+#
+# throttling will increase this number, so setting a request delay of 5000
+# and using the default throttle settings would result in a maximum wait time
+# of (5000+(200*225)) milliseconds or 50 seconds per request when the API
+# limit is reached
+#
+# edda.crawler.requestDelay=0
+
+#
 # enable/disable a crawler for a collection.  Rarely used, you should
 # probably disable the collection instead of the crawler.
 #
