update configuration file and remove log message

--- a/src/main/resources/edda.properties
+++ b/src/main/resources/edda.properties
@@ -95,6 +95,11 @@ edda.collection.cache.refresh=30000
 # How frequently should the Primary Edda server crawl the resources
 # for updates.  The value is in milliseconds
 #
+# Rate can also be specified by collection, account, or both:
+# edda.collection.$account.refresh=120000
+# edda.collection.$collection.refresh=120000
+# edda.collection.$account.$collection.refresh=120000
+#
 edda.collection.refresh=120000
 
 #refresh cloudformation data every hour by default
